--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Web Studio</title>
   </head>
   <body>
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html">Web<span>studio</span></a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -93,11 +104,84 @@
           </li>
         </ul>
       </section>
+
+      <!--Our Portfolio-->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-1.jpg"
+                alt="Mobile app"
+                whidth="360"
+              />
+              <h3>Banking App</h3>
+              <p>App</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-2.jpg"
+                alt="Payment by phone"
+                whidth="360"
+              />
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-3.jpg"
+                alt="Laptop and phone"
+                whidth="360"
+              />
+              <h3>Meditation App</h3>
+              <p>App</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-4.jpg"
+                alt="car steering wheel"
+                whidth="360"
+              />
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-5.jpg"
+                alt="phone screen"
+                whidth="360"
+              />
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-6.jpg"
+                alt="A girl with a phone takes a course"
+                whidth="360"
+              />
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!--footer-->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html">Webstudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
