--- a/index.html
+++ b/index.html
@@ -18,20 +18,30 @@
   </head>
   <body>
     <!--Header-->
-    <header>
-      <nav>
-        <a href="./index.html">Web<span>studio</span></a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo-link" href="./index.html"><span>Web</span>studio</a>
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-item-link" href="">Studio</a></li>
+          <li class="nav-item">
+            <a class="nav-item-link" href="">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-item-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="adress">
+        <ul class="adress-list">
+          <li class="adress-item">
+            <a class="adress-link" mailto:nfo@devstudio.com
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="adress-item">
+            <a class="adress-link" tel:+110001111111>+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -83,22 +93,42 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/team-1.jpg" alt="photo" width="264" />
+            <img
+              src="./images/team-1.jpg"
+              alt="photo"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/team-2.jpg" alt="photo" width="264" />
+            <img
+              src="./images/team-2.jpg"
+              alt="photo"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team-3.jpg" alt="photo" width="264" />
+            <img
+              src="./images/team-3.jpg"
+              alt="photo"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/team-4.jpg" alt="photo" width="264" />
+            <img
+              src="./images/team-4.jpg"
+              alt="photo"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -115,6 +145,7 @@
                 src="./images/portfolio-1.jpg"
                 alt="Mobile app"
                 whidth="360"
+                heigt="300"
               />
               <h3>Banking App</h3>
               <p>App</p>
@@ -126,6 +157,7 @@
                 src="./images/portfolio-2.jpg"
                 alt="Payment by phone"
                 whidth="360"
+                heigt="300"
               />
               <h3>Cashless Payment</h3>
               <p>Marketing</p>
@@ -137,6 +169,7 @@
                 src="./images/portfolio-3.jpg"
                 alt="Laptop and phone"
                 whidth="360"
+                heigt="300"
               />
               <h3>Meditation App</h3>
               <p>App</p>
@@ -148,6 +181,7 @@
                 src="./images/portfolio-4.jpg"
                 alt="car steering wheel"
                 whidth="360"
+                heigt="300"
               />
               <h3>Taxi Service</h3>
               <p>Marketing</p>
@@ -159,6 +193,7 @@
                 src="./images/portfolio-5.jpg"
                 alt="phone screen"
                 whidth="360"
+                heigt="300"
               />
               <h3>Screen Illustrations</h3>
               <p>Design</p>
@@ -170,6 +205,7 @@
                 src="./images/portfolio-6.jpg"
                 alt="A girl with a phone takes a course"
                 whidth="360"
+                heigt="300"
               />
               <h3>Online Courses</h3>
               <p>Marketing</p>
