edit html and css

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <header class="header">
       <nav class="nav">
         <a class="logo-link" href="./index.html"
-          >Web<span class="logo-link-header">studio</span></a
+          >Web<span class="logo-link-header">Studio</span></a
         >
         <ul class="nav-list">
           <li class="nav-item">
-            <a class="nav-item-link" href="">Studio</a>
+            <a class="nav-item-link" href="./index.html">Studio</a>
           </li>
           <li class="nav-item">
             <a class="nav-item-link" href="">Portfolio</a>
@@ -147,86 +147,74 @@
       </section>
 
       <!--Our Portfolio-->
-      <section>
-        <h2 class="portfolio">Our Portfolio</h2>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-1.jpg"
-                alt="Mobile app"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-subtitle">Banking App</h3>
-              <p class="portfolio-text">App</p>
-            </a>
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-1.jpg"
+              alt="Mobile app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-2.jpg"
-                alt="Payment by phone"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-subtitle">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
-            </a>
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-2.jpg"
+              alt="Payment by phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-3.jpg"
-                alt="Laptop and phone"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-subtitle">Meditation App</h3>
-              <p class="portfolio-text">App</p>
-            </a>
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-3.jpg"
+              alt="Laptop and phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-4.jpg"
-                alt="car steering wheel"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-subtitle">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
-            </a>
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-4.jpg"
+              alt="car steering wheel"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-5.jpg"
-                alt="phone screen"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
-            </a>
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-5.jpg"
+              alt="phone screen"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
           <li class="portfolio-item">
-            <a class="portfolio-link" href="">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-6.jpg"
-                alt="A girl with a phone takes a course"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-subtitle">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
-            </a>
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-6.jpg"
+              alt="A girl with a phone takes a course"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
@@ -235,7 +223,7 @@
     <!--footer-->
     <footer class="footer">
       <a class="logo-link" href="./index.html"
-        >Web<span class="logo-link-footer">studio</span></a
+        >Web<span class="logo-link-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
